--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -305,7 +305,7 @@
     "            if self.target_pad_id != self.tokenizer.pad_token_id:\n",
     "                tgt_attn_mask = target_enc.attention_mask.to(torch.bool)\n",
     "                targets = torch.where(tgt_attn_mask, targets, -100)\n",
-    "            targets = (targets, )\n",
+    "            targets = (TransTensorText(targets), )\n",
     "        else:\n",
     "            # inps are batched, collate targets into batches too\n",
     "            targets = default_collate([s[1:] for s in batch])\n",
@@ -362,7 +362,7 @@
     "                              max_length=self.max_length,\n",
     "                              return_tensors='pt',\n",
     "                              **self.kwargs)\n",
-    "\n",
+    "        inps = {k:TransTensorText(v) for k, v in inps.items() if (isinstance(v, torch.Tensor) and v.dim()>1)}\n",
     "        # inps are batched, collate targets into batches too\n",
     "        labels = default_collate([s[1:] for s in samples])\n",
     "        res = (inps, ) + tuple(labels)\n",
@@ -484,11 +484,11 @@
     "    @delegates(TokBatchTransform)\n",
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
     "                 config=None, tokenizer=None, preprocessed=False, do_targets=False, \n",
-    "                 **kwargs):\n",
+    "                 group_by_len=True, **kwargs):\n",
     "        batch_tfm_cls = PadBatchTransform if preprocessed else TokBatchTransform\n",
     "        before_batch_tfm = batch_tfm_cls(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls,\n",
     "                 config=config, tokenizer=tokenizer, do_targets=do_targets, **kwargs)\n",
-    "        return super().__init__(dl_type=SortedDL,\n",
+    "        return super().__init__(dl_type=SortedDL if group_by_len else TfmdDL,\n",
     "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
     "                                            'create_batch': fa_convert},\n",
     "                                batch_tfms=UndictS2S() if do_targets else Undict()\n",
@@ -991,7 +991,7 @@
     "    def encodes(self, batch):\n",
     "        # inputs are list of tuple(dict, label)\n",
     "        inps = [b[0] for b in batch]\n",
-    "        sk1, sk2 = self.sentece_keys\n",
+    "        sk1, sk2 = self.sentence_keys\n",
     "        num_endings = len(self.ending_keys)\n",
     "        texts1, texts2 = [], []\n",
     "        for s in inps:\n",
@@ -1014,7 +1014,7 @@
     "            res = (inps, ) + tuple(targets)\n",
     "        return res\n",
     "    \n",
-    "    def decodes(self, x:TensorText):\n",
+    "    def decodes(self, x:TransTensorText):\n",
     "        endings = ()\n",
     "        for i, l in enumerate(self.ending_keys):\n",
     "            x1, x2 = split_by_sep(x[i, :], self.tokenizer.sep_token_id)\n",
@@ -1033,12 +1033,12 @@
     "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
     "    @delegates(MultiChoiceTransform)\n",
     "    def __init__(self, sentence_keys, ending_keys, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
-    "                 config=None, tokenizer=None, preprocessed=False, \n",
+    "                 config=None, tokenizer=None, preprocessed=False, group_by_len=True,\n",
     "                 **kwargs):\n",
     "        batch_tfm_cls = MultiChoiceTransform\n",
     "        before_batch_tfm = batch_tfm_cls(sentence_keys, ending_keys, pretrained_model_name=pretrained_model_name, \n",
     "                tokenizer_cls=tokenizer_cls, config=config, tokenizer=tokenizer, **kwargs)\n",
-    "        return super().__init__(dl_type=SortedDL,\n",
+    "        return super().__init__(dl_type=SortedDL if group_by_len else TfmdDL,\n",
     "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
     "                                            'create_batch': fa_convert},\n",
     "                                batch_tfms=Undict())"
