--- a/nbs/15_examples.summarization.ipynb
+++ b/nbs/15_examples.summarization.ipynb
@@ -71,7 +71,7 @@
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    !pip install -Uqq fastai transformers datasets wandb rouge-score nltk\n",
-    "    !pip install -q git+git://github.com/aikindergarten/fasthugs.git@sum"
+    "    !pip install -q git+git://github.com/aikindergarten/fasthugs.git"
    ]
   },
   {
