--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -60,7 +60,8 @@
     "1. [Sentiment classification: IMDB](https://aikindergarten.github.io/fasthugs/examples.classification-imdb.html)\n",
     "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)\n",
     "3. [Machine Translation](https://aikindergarten.github.io/fasthugs/examples.machine-translation.html)\n",
-    "4. [Summarization](https://aikindergarten.github.io/fasthugs/examples.summarization.html)"
+    "4. [Summarization](https://aikindergarten.github.io/fasthugs/examples.summarization.html)\n",
+    "5. [Multiple Chice](https://aikindergarten.github.io/fasthugs/examples.multiple_choice.html)"
    ]
   },
   {
