--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -755,14 +755,14 @@
    "source": [
     "#export\n",
     "class TransformersLMBlock(TransformBlock):\n",
-    "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
+    "    \"A `TransformBlock` for language modelling using pretrained tokenizers from Huggingface\"\n",
     "    # @delegates\n",
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
     "                 config=None, tokenizer=None, mlm=True, masking_func=None, whole_word_masking=False, \n",
     "                 mlm_probability=0.15, preprocessed=True, **kwargs):\n",
     "        tok_tfm = TokTransform(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls, \n",
-    "                     config=config, tokenizer=tokenizer, return_special_tokens_mask=True, is_lm=True,\n",
-    "                     preprocessed=preprocessed, **kwargs)\n",
+    "                               config=config, tokenizer=tokenizer, return_special_tokens_mask=True, is_lm=True,\n",
+    "                               preprocessed=preprocessed, **kwargs)\n",
     "        \n",
     "        batch_tfms = LMBatchTfm(pretrained_model_name, tokenizer_cls, config, tokenizer, \n",
     "                                mlm=mlm, masking_func=masking_func, whole_word_masking=whole_word_masking,\n",
@@ -1030,7 +1030,7 @@
    "source": [
     "#export\n",
     "class MultiChoiceBlock(TransformBlock):\n",
-    "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
+    "    \"A `TransformBlock` for multiple choice using pretrained tokenizers from Huggingface\"\n",
     "    @delegates(MultiChoiceTransform)\n",
     "    def __init__(self, sentence_keys, ending_keys, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
     "                 config=None, tokenizer=None, preprocessed=False, group_by_len=True,\n",
@@ -1038,6 +1038,97 @@
     "        batch_tfm_cls = MultiChoiceTransform\n",
     "        before_batch_tfm = batch_tfm_cls(sentence_keys, ending_keys, pretrained_model_name=pretrained_model_name, \n",
     "                tokenizer_cls=tokenizer_cls, config=config, tokenizer=tokenizer, **kwargs)\n",
+    "        return super().__init__(dl_type=SortedDL if group_by_len else TfmdDL,\n",
+    "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
+    "                                            'create_batch': fa_convert},\n",
+    "                                batch_tfms=Undict())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Token Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class PadTokBatchTransform(Transform):\n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
+    "                 config=None, tokenizer=None, with_labels=False, padding=True, \n",
+    "                 truncation=True, max_length=None, label_vocab=None,\n",
+    "                 target_pad_id=-100, **kwargs):\n",
+    "        if tokenizer is None:\n",
+    "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.kwargs = kwargs\n",
+    "        self._two_texts = False\n",
+    "        store_attr()\n",
+    "\n",
+    "    def encodes(self, samples):\n",
+    "        toks = [s[0] for s in samples]\n",
+    "        # the labels are expected to be found either in dictionary with tokens\n",
+    "        # or as element 1 of each sample\n",
+    "        labels = ([s['labels'] for s in toks] \n",
+    "                    if ('labels' in toks[0].keys()) else\n",
+    "                    [s[1] for s in samples])\n",
+    "\n",
+    "        label_lens = [len(l) for l in labels]\n",
+    "        max_label_length = max(label_lens)\n",
+    "        padding_side = self.tokenizer.padding_side\n",
+    "        for tok, label, label_len in zip(toks, labels, label_lens):\n",
+    "            remainder = [self.target_pad_id] * (max_label_length - label_len)\n",
+    "            tok[\"labels\"] = (label + remainder\n",
+    "                             if padding_side==\"right\" else\n",
+    "                             remainder + label)\n",
+    "        inps = self.tokenizer.pad(toks,\n",
+    "                              padding=self.padding,\n",
+    "                              max_length=self.max_length,\n",
+    "                              return_tensors='pt',\n",
+    "                              **self.kwargs)\n",
+    "        labels = inps.pop('labels')\n",
+    "        inps = {k:TransTensorText(v) for k, v in inps.items() if (isinstance(v, torch.Tensor) and v.dim()>1)}\n",
+    "        if self.with_labels:\n",
+    "            inps['labels'] = labels\n",
+    "            res = (inps, )\n",
+    "        else:\n",
+    "            res = (inps, ) + (labels, )\n",
+    "        return res\n",
+    "\n",
+    "    def decodes(self, x:TransTensorText):\n",
+    "        if self._two_texts:\n",
+    "            x1, x2 = split_by_sep(x, self.tokenizer.sep_token_id)\n",
+    "            return (TitledStrEx(self.tokenizer.decode(x1.cpu(), skip_special_tokens=True)),\n",
+    "                    TitledStrEx(self.tokenizer.decode(x2.cpu(), skip_special_tokens=True)))\n",
+    "        return TitledStrEx(self.tokenizer.decode(x.cpu(), skip_special_tokens=True))\n",
+    "    def decodes(self, x):\n",
+    "        if self.label_vocab is not None:\n",
+    "            res = [self.label_vocab[e] for e in x if e != -100]\n",
+    "        else:\n",
+    "            res = [e for e in x if e != -100]\n",
+    "        return TitledStrEx(''.join(f'{x}, ' for x in res), label='tags')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class TokenClassificationBlock(TransformBlock):\n",
+    "    \"A `TransformBlock` for token classification using pretrained tokenizers from Huggingface\"\n",
+    "    @delegates(PadTokBatchTransform)\n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
+    "                 config=None, tokenizer=None, with_labels=True, label_vocab=None, \n",
+    "                 group_by_len=True, **kwargs):\n",
+    "        before_batch_tfm = PadTokBatchTransform(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls,\n",
+    "                 config=config, tokenizer=tokenizer, label_vocab=label_vocab, with_labels=True, **kwargs)\n",
     "        return super().__init__(dl_type=SortedDL if group_by_len else TfmdDL,\n",
     "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
     "                                            'create_batch': fa_convert},\n",
