--- a/nbs/02_metrics.ipynb
+++ b/nbs/02_metrics.ipynb
@@ -73,6 +73,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fe97eb9-e651-4f18-b6ed-8b2e2a007493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class MetricCallback(Callback):\n",
+    "    \"\"\"\n",
+    "    Computes metric scores using HuggingFace datasets metric\n",
+    "    \"\"\"\n",
+    "    order = TransCallback.order + 2\n",
+    "    run_train, run_valid = False, True\n",
+    "    score_xtra_keys = {}\n",
+    "\n",
+    "    def before_fit(self): self.add_metrics()\n",
+    "\n",
+    "    def after_loss(self):\n",
+    "        if self.predict_with_generate:\n",
+    "            preds = self.generated_tokens\n",
+    "        else:\n",
+    "            preds = self.pred.argmax(-1)\n",
+    "        labels = self.yb[0] if len(self.yb) else self.trans.labels[0]\n",
+    "\n",
+    "        preproc_preds, preproc_labels = self.preprocess(preds, labels)\n",
+    "        self.metric.add_batch(predictions=preproc_preds, references=preproc_labels)\n",
+    "\n",
+    "    def after_validate(self):\n",
+    "        self.res = self.metric.compute()\n",
+    "\n",
+    "    def preprocess(self, predictions, labels):\n",
+    "        return predictions, labels\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _get_score(obj, score, **kwargs):\n",
+    "        return obj.res[score]\n",
+    "    \n",
+    "    def _register_value_funcs(self):\n",
+    "        for score in self.scores:\n",
+    "            func = partial(self._get_score, self, score, **self.score_xtra_keys)\n",
+    "            setattr(self, score, func)\n",
+    "\n",
+    "    def add_metrics(self):\n",
+    "        learn_metrics = set([m.name for m in self.metrics])\n",
+    "        for score_name in self.scores:\n",
+    "            if not (score_name in learn_metrics):\n",
+    "                self.learn.metrics += [ValueMetric(getattr(self, score_name), score_name)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "142ce4d3-42ee-4859-9d93-180e27ac6fac",
    "metadata": {},
@@ -103,7 +153,7 @@
     "class RougeScore(Callback):\n",
     "    \"\"\"\n",
     "    Computes ROUGE score using HF datasets metric. Adds `ValueMetric`\n",
-    "    for each score iin `scores` \n",
+    "    for each score in `scores` \n",
     "    \"\"\"\n",
     "    order = TransCallback.order + 2\n",
     "    run_train, run_valid = False, True\n",
@@ -116,7 +166,7 @@
     "\n",
     "    def before_fit(self): self.add_metrics()\n",
     "    \n",
-    "    def after_pred(self):\n",
+    "    def after_loss(self):\n",
     "        if self.predict_with_generate:\n",
     "            preds = self.generated_tokens\n",
     "        else:\n",
@@ -146,6 +196,47 @@
     "            if not (score_name in learn_metrics):\n",
     "                self.learn.metrics += [ValueMetric(getattr(self, score_name), score_name)]\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be417959-d65c-45cc-a922-db97c912b3c2",
+   "metadata": {},
+   "source": [
+    "## Seqeval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e757472-1a84-4f93-9a6e-502039d1b586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class Seqeval(MetricCallback):\n",
+    "    \"Computes scores using `seqeval` https://github.com/chakki-works/seqeval\"\n",
+    "    def __init__(self, label_list, scores:Tuple[str]=('accuracy', 'f1', 'precision', 'recall')):\n",
+    "        self.metric = load_metric('seqeval')\n",
+    "        store_attr()\n",
+    "        self._register_value_funcs()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _get_score(obj, score, **kwargs):\n",
+    "        return obj.res[f\"overall_{score}\"]\n",
+    "\n",
+    "    def preprocess(self, predictions, labels):\n",
+    "        \"Preprocess predictions and labels for seqeval, ref: https://github.com/huggingface/notebooks/blob/master/examples/token_classification.ipynb\"\n",
+    "        # Remove ignored index (special tokens)\n",
+    "        true_predictions = [\n",
+    "            [self.label_list[p] for (p, l) in zip(prediction, label) if l != -100]\n",
+    "            for prediction, label in zip(predictions, labels)\n",
+    "        ]\n",
+    "        true_labels = [\n",
+    "            [self.label_list[l] for (p, l) in zip(prediction, label) if l != -100]\n",
+    "            for prediction, label in zip(predictions, labels)\n",
+    "        ]\n",
+    "        return true_predictions, true_labels"
    ]
   },
   {
