--- a/nbs/02_metrics.ipynb
+++ b/nbs/02_metrics.ipynb
@@ -55,7 +55,7 @@
     "from fastcore.all import *\n",
     "from fastai.basics import Transform, ItemTransform, Callback, ValueMetric\n",
     "from functools import partial\n",
-    "from typing import List\n",
+    "from typing import List, Tuple\n",
     "from datasets import load_metric\n",
     "try:\n",
     "    import nltk\n",
@@ -153,7 +153,7 @@
     "class RougeScore(Callback):\n",
     "    \"\"\"\n",
     "    Computes ROUGE score using HF datasets metric. Adds `ValueMetric`\n",
-    "    for each score in `scores` \n",
+    "    for each score in `scores`\n",
     "    \"\"\"\n",
     "    order = TransCallback.order + 2\n",
     "    run_train, run_valid = False, True\n",
