--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -61,7 +61,8 @@
     "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)\n",
     "3. [Machine Translation](https://aikindergarten.github.io/fasthugs/examples.machine-translation.html)\n",
     "4. [Summarization](https://aikindergarten.github.io/fasthugs/examples.summarization.html)\n",
-    "5. [Multiple Chice](https://aikindergarten.github.io/fasthugs/examples.multiple_choice.html)"
+    "5. [Multiple Choice](https://aikindergarten.github.io/fasthugs/examples.multiple_choice.html)\n",
+    "6. [Token Classification](https://aikindergarten.github.io/fasthugs/examples.token_classification.html)"
    ]
   },
   {
