--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -255,16 +255,16 @@
     "#export\n",
     "class TokTransform(Transform):\n",
     "    \"Tokenizes single piece of text using pretrained tokenizer\"\n",
-    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
     "                 config=None, tokenizer=None, is_lm=False,\n",
-    "                 padding=False, truncation=False, max_length=None, \n",
-    "                 preprocessed=False, **kwargs):\n",
+    "                 padding=False, truncation=False, max_length=None,\n",
+    "                 preprocessed=False, skip_special_tokens=False, **kwargs):\n",
     "        if tokenizer is None:\n",
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        self.tokenizer = tokenizer\n",
     "        self.kwargs = kwargs\n",
     "        store_attr()\n",
-    "        \n",
+    "\n",
     "    def encodes(self, x):\n",
     "        if self.preprocessed:\n",
     "            toks = x\n",
@@ -277,9 +277,9 @@
     "                          return_tensors='pt',\n",
     "                          **self.kwargs)\n",
     "        return toks\n",
-    "    \n",
+    "\n",
     "    def decodes(self, x:TransTensorText):\n",
-    "        return TitledStrEx(self.tokenizer.decode(x.cpu(), skip_special_tokens=False))"
+    "        return TitledStrEx(self.tokenizer.decode(x.cpu(), skip_special_tokens=self.skip_special_tokens))"
    ]
   },
   {
@@ -442,22 +442,22 @@
     "#export\n",
     "class LMBatchTfm(Transform):\n",
     "    \"Collates batch of pretokenized and chunked inputs into a batch and creates labels as defined by `masking_func`\"\n",
-    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
     "                 config=None, tokenizer=None, mlm=True, masking_func=None, whole_word_masking=False,\n",
     "                 mlm_probability=0.15):\n",
     "        if tokenizer is None:\n",
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        if masking_func is None:\n",
-    "            masking_func = (DataCollatorForWholeWordMask(tokenizer, mlm, mlm_probability) \n",
-    "                            if whole_word_masking else \n",
+    "            masking_func = (DataCollatorForWholeWordMask(tokenizer, mlm, mlm_probability)\n",
+    "                            if whole_word_masking else\n",
     "                            DataCollatorForLanguageModeling(tokenizer, mlm, mlm_probability))\n",
     "        self.masking_func = masking_func\n",
     "        self.batch_processor = compose(untuple, masking_func, to_tuple)\n",
-    "            \n",
+    "\n",
     "    def encodes(self, b):\n",
     "        # we get list of tuples but need a list of dicts\n",
     "        return self.batch_processor(b)\n",
-    "    \n",
+    "\n",
     "    def decodes(self, b:(dict, BatchEncoding)):\n",
     "        if 'input_ids' in b: res = TransTensorText(b['input_ids'])\n",
     "        return res"
@@ -855,23 +855,22 @@
     "#export\n",
     "class TransformersLMBlock(TransformBlock):\n",
     "    \"A `TransformBlock` for language modelling using pretrained tokenizers from Huggingface\"\n",
-    "    # @delegates\n",
-    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
-    "                 config=None, tokenizer=None, mlm=True, masking_func=None, whole_word_masking=False, \n",
-    "                 mlm_probability=0.15, preprocessed=True, **kwargs):\n",
-    "        tok_tfm = TokTransform(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls, \n",
+    "    @delegates(TokTransform)\n",
+    "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
+    "                 config=None, tokenizer=None, mlm=True, masking_func=None, whole_word_masking=False,\n",
+    "                 mlm_probability=0.15, preprocessed=True, group_by_len=False, **kwargs):\n",
+    "        tok_tfm = TokTransform(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls,\n",
     "                               config=config, tokenizer=tokenizer, return_special_tokens_mask=True, is_lm=True,\n",
     "                               preprocessed=preprocessed, **kwargs)\n",
-    "        \n",
-    "        batch_tfms = LMBatchTfm(pretrained_model_name, tokenizer_cls, config, tokenizer, \n",
+    "\n",
+    "        batch_tfms = LMBatchTfm(pretrained_model_name, tokenizer_cls, config, tokenizer,\n",
     "                                mlm=mlm, masking_func=masking_func, whole_word_masking=whole_word_masking,\n",
     "                                mlm_probability=mlm_probability)\n",
-    "        create_batch = compose(untuple, DataCollatorForLanguageModeling(tokenizer), to_tuple)\n",
-    "        return super().__init__(dl_type=TfmdDL,\n",
+    "        \n",
+    "        return super().__init__(dl_type=SortedDL if group_by_len else TfmdDL,\n",
     "                                type_tfms=tok_tfm,\n",
     "                                batch_tfms=batch_tfms,\n",
-    "                                dls_kwargs={'create_batch': fa_convert},\n",
-    "                               )"
+    "                                dls_kwargs={'create_batch': fa_convert})"
    ]
   },
   {
